welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:20: error: Unmatched closing brace '}' ignored here
	}
        ^DwarfCode:21: error: eof expected but '}' found.
}
^