welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estFaceMur()==false) {
	

while (estSurBiscuit()==false) {
	if(estSurBiscuit()==true) {
		prendBiscuit() ;      }
		else avance() ;
 
avance() ;  } }

while (estSurBiscuit()==true) {
	droite() ;
	droite() ;
	avance(); }
 
avance() ;  }}
